@@ -307,4 +307,49 @@ public:
 	}
 };
 
+enum {
+	GPAD_NONE = 0,
+	GPAD_LEFT,
+	GPAD_RIGHT,
+	GPAD_UP,
+	GPAD_DOWN,
+	GPAD_BUTTON0,
+	GPAD_BUTTON1,
+	GPAD_BUTTON2,
+	GPAD_BUTTON3,
+	GPAD_BUTTON4,
+	GPAD_BUTTON5,
+	GPAD_BUTTON6,
+	GPAD_BUTTON7,
+	GPAD_BUTTON8,
+	GPAD_BUTTON9,
+	GPAD_LAST1
+};
+
+/** Wrapper for SDL_Joystick. Yes, it should be gamecontroller
+ * but I cannot open a valid gamepad as controller but as joystick
+ * so we go with what works. */
+class Gamepad {
+	SDL_Joystick *js;
+	uint numbuttons;
+	Uint8 state[GPAD_LAST1];
+public:
+	Gamepad() : js(NULL), numbuttons(0) {}
+	~Gamepad() {
+		close();
+	}
+	void open();
+	int opened() {
+		return (js != NULL);
+	}
+	void close() {
+		if (js) {
+			SDL_JoystickClose(js);
+			_loginfo("Closed game controller 0\n");
+			js = NULL;
+		}
+	}
+	const Uint8 *update();
+};
+
 #endif /* SDL_H_ */
